k8s/two-tier-app-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-tier-app-dep
  namespace: two-tier-ns
  labels:
    app: two-tier-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: two-tier-app

  template:
    metadata:
      labels:
        app: two-tier-app

    spec:
      containers:
      - name: two-tier-app
        image: zarifkhanjaveed/two-tier-flask-app:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 2
