k8s/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: two-tier-ns
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
