k8s/two-tier-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-svc
  namespace: two-tier-ns
spec:
  type: NodePort
  selector:
    app: two-tier-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
