k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-tier-ingress
  namespace: two-tier-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: "YOUR_EC2_PUBLIC_IP.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: two-tier-app-service
            port:
              number: 80
